--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -1,1 +1,7 @@
-<div></div>
+<div align="center">
+   <script type="text/javascript" src="https://www.hitwebcounter.com/counter/counter.js"></script>
+<!-- hitwebcounter Code START -->
+   <a href="https://www.hitwebcounter.com" target="_blank">
+   <img src="https://hitwebcounter.com/counter/counter.php?page=19753442&style=0006&nbdigits=5&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>  
+  </a>
+</div>
