--- a/themes/ananke/layouts/partials/summary-with-image.html
+++ b/themes/ananke/layouts/partials/summary-with-image.html
@@ -20,12 +20,11 @@ More info here: https://github.com/theNewDynamic/gohugo-theme-ananke/releases/ta
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          {{ .Summary }}
+          {{ .Content }}
         </div>
         {{ with .Params.author | default .Site.Params.author }}
           <p class="f6 lh-copy mv0">By {{ . }}</p>
         {{- end -}}
-        <a href="{{.RelPermalink}}" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">{{ $.Param "read_more_copy" | default (i18n "readMore") }}</a>
       </div>
     </div>
   </div>
