just copied from public to docs again

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
   <article class="pa3 pa4-ns">
     <h1>{{ .Title }}</h1>
-    <p><time>{{ .Date.Format "January 2, 2006" }}</time></p>
+    <!-- <p><time>{{ .Date.Format "January 2, 2006" }}</time></p> -->
     <div>
       {{ .Content }}
     </div>
