--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -3,8 +3,11 @@
     <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy {{ $.Param "text_color$
       {{- .Content -}}
     </section>
+
+    {{ partial "cards.html" . }}
+
     <!-- <section class="flex-ns flex-wrap justify-around mt5"> -->
-      <section class="justify-around mt8">
+      <section class="justify">
       {{ range .Paginator.Pages }}
         <div class="relative w-100 w-90-l mb6 bg-grey">
           {{ .Content }}
