--- a/layouts/partials/summary-with-image.html
+++ b/layouts/partials/summary-with-image.html
@@ -13,6 +13,7 @@ More info here: https://github.com/theNewDynamic/gohugo-theme-ananke/releases/ta
         <div class="w-20-ns w-100 mb3 pr3-ns">
           <a href="{{ .RelPermalink }}" class="db grow">
             <img src="{{ $featured_image }}" class="img" alt="image from {{ .Title }}">
+            <div style="background: yellow; padding: 1rem;">IMAGE</div>
           </a>
         </div>
       {{ end }}
@@ -25,6 +26,7 @@ More info here: https://github.com/theNewDynamic/gohugo-theme-ananke/releases/ta
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
           {{ .Content }}
+          <div style="background: yellow; padding: 1rem;">TEXT</div>
         </div>
         {{ with .Params.author | default .Site.Params.author }}
           <p class="f6 lh-copy mv0">By {{ . }}</p>
