--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,11 +1,17 @@
 {{ define "main" }}
 <article class="pa3 pa4-ns center lh-copy" style="max-width: 1200px; width: 80%;">
+  <div class="tc mt4">
+    <a href="/" class="f6 link dim br2 ba ph3 pv2 mb2 dib dark-gray">← Back to Home</a>
+  </div>
   <h1 class="f2 lh-title">{{ .Title }}</h1>
   <!-- <p><time>{{ .Date.Format "January 2, 2006" }}</time></p> -->
   <div class="mt3">
     {{ .Content }}
   </div>
-</article>
 
+  <div class="tc mt4">
+    <a href="/" class="f6 link dim br2 ba ph3 pv2 mb2 dib dark-gray">← Back to Home</a>
+  </div>
+</article>
 {{ end }}
 
