Update menu with Media page and Add robots.txt to allow search engine indexing

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,8 +1,7 @@
 {{ define "main" }}
 <!--  <article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy {{ $.Param "text_color" | default "mid-gray" }}">
     -->
-<article class="cf ph3 ph4-l pv3 pv4-l f4 tc-l center lh-copy" style="max-width: 80ch;">
-
+<article class="cf ph3 ph4-l pt3 pt4-l pb2 pb3-l f4 tc-l center lh-copy" style="max-width: 80ch;">
 
 	{{ .Content }}
   </article>
