Update menu with Media page and Add robots.txt to allow search engine indexing

--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -66,6 +66,7 @@ header.cover.uniform-header {
   header.cover.uniform-header {
     height: 25vh;
     min-height: 200px;
+    background-color: red;
   }
 }
 
